
2019-09-26  Ron Norman <rjn@inglenet.com>

	* sysdefines.h: New header to keep system dependent #defines
	* common.c,common.h: Uses sysdefines.h

2019-09-23  Simon Sobisch <simonsobisch@gnu.org>

	* common.h: moved alignment defines to cobc/cobc.h

2019-09-20  Ron Norman <rjn@inglenet.com>

	* reportio.c: Table up report for cleanup in cob_exit_reportio

2019-09-10  Ron Norman <rjn@inglenet.com>

	* fileio.c: Fix relative_read_size to use 'size_t' for GC file type

2019-09-03  Ron Norman <rjn@inglenet.com>

	* call.c: Initialize valid_char when needed
	* numeric.c: Correct the definition of 'isinf'

2019-08-28  Ron Norman <rjn@inglenet.com>

	* fileio.c: Free up 'fcd' fnamePtr allocated 

2019-08-27  Ron Norman <rjn@inglenet.com>

	* fileio.c: Clean up 'fcd' tables dynamically allocated via free_extfh_fcd
	            fix some compile warnings

2019-08-17  Simon Sobisch <simonsobisch@gnu.org>

	* call.c (cob_resolve_internal): refactored to keep call_entry_buff
	  and call_entry_buff2 as a local variables instead of dynamic
	  storage check + allocating + deallocating
	* common.h, call.c (cob_encode_program_id): extracted from
	  cob_resolve_internal and added explicit check for the buffer
	  size fixing bug #584; externalized for use by cobc
	* common.h: new define COB_MAX_LITERAL_LEN, with currently 256k,
	  used in cobc instead of previous LONG_MAX

2019-07-14  Simon Sobisch <simonsobisch@gnu.org>

	* system.def: added CBL_ALARM_SOUND and CBL_BELL_SOUND, both as alias
	  to cob_sys_sound_bell

2019-07-06  Simon Sobisch <simonsobisch@gnu.org>

	* common.h: removed inclusion of stdio.h
	* common.h, coblocal.h: moved definition of cob_print_field to local
	* fileio.c (cob_write_dict): fixed compiler warnings

2019-07-02  Simon Sobisch <simonsobisch@gnu.org>

	* common.c (cob_sys_oc_nanosleep): fixed by splitting get_sleep_nanoseconds
	  into an additional function get_sleep_nanoseconds_from_seconds

2019-07-01  Ron Norman <rjn@inglenet.com>
