@@ -38,6 +38,7 @@
 #include <fcntl.h>
 #endif
 
+#include "../libcob/sysdefines.h"
 #include "libcob.h"
 #include "tarstamp.h"
 
