@@ -105,6 +105,8 @@ lt_dlerror (void)
 
 #endif
 
+#include "sysdefines.h"
+
 /* Force symbol exports */
 #define	COB_LIB_EXPIMP
 #include "libcob.h"
