@@ -2,7 +2,8 @@
 2019-09-26  Ron Norman <rjn@inglenet.com>
 
 	* sysdefines.h: New header to keep system dependent #defines
-	* common.c,common.h: Uses sysdefines.h
+	* common.c,common.h,call.c,fileio.c: Uses sysdefines.h
+	* Makefile.am: added sysdefines.h
 
 2019-09-23  Simon Sobisch <simonsobisch@gnu.org>
 
